--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/Admin/Desktop/Bukkit/Bukkit Server/bukkit.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Admin/Desktop/Bukkit/Bukkit Server/plugins/iConomy.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
