--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,3 +1,6 @@
 name: Towny
 main: com.shade.bukkit.towny.Towny
-version: '2.0.13'
+version: '2.0.14'
+commands:
+    towny:
+        description: Basic towny commands
