--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,8 @@
 name: Towny
 main: ca.xshade.bukkit.towny.Towny
-version: '2.0.26'
+version: '2.0.27'
+author: Shade
+website: http://towny.xshade.ca
 commands:
     towny:
         description: Basic towny commands
