--- a/.classpath
+++ b/.classpath
@@ -3,9 +3,10 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/Admin/Desktop/Bukkit/Server/bukkit.jar" sourcepath="C:/Users/Admin/Desktop/git/Bukkit"/>
-	<classpathentry kind="lib" path="C:/Users/Admin/Desktop/Bukkit/Server/plugins/iConomy.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Admin/Desktop/Bukkit/Server/plugins/Permissions.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Admin/Desktop/Bukkit/Server/plugins/Essentials.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Admin/Desktop/Bukkit/Server/plugins/EssentialsTele.jar"/>
+	<classpathentry kind="lib" path="lib/Essentials.jar"/>
+	<classpathentry kind="lib" path="lib/EssentialsTele.jar"/>
+	<classpathentry kind="lib" path="lib/GroupManager.jar"/>
+	<classpathentry kind="lib" path="lib/iConomy.jar"/>
+	<classpathentry kind="lib" path="lib/Permissions.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
