--- a/.classpath
+++ b/.classpath
@@ -2,11 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="H:/Minecraft/Development/766/Questioner.jar"/>
-	<classpathentry kind="lib" path="H:/Minecraft/Development/818/bukkit-0.0.1-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="H:/Minecraft/Development/818/craftbukkit-0.0.1-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="H:/Minecraft/Development/818/Essentials.jar"/>
-	<classpathentry kind="lib" path="H:/Minecraft/Development/818/iConomy.jar"/>
-	<classpathentry kind="lib" path="H:/Minecraft/Development/818/Permissions.jar"/>
+	<classpathentry kind="lib" path="/home/croxis/Downloads/bukkit-0.0.1-SNAPSHOT(1).jar"/>
+	<classpathentry kind="lib" path="/home/croxis/minecraftserver/plugins/Essentials.jar"/>
+	<classpathentry kind="lib" path="/home/croxis/minecraftserver/plugins/iConomy.jar"/>
+	<classpathentry kind="lib" path="/home/croxis/minecraftserver/plugins/Permissions.jar"/>
+	<classpathentry kind="lib" path="/home/croxis/minecraftserver/plugins/Questioner.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
